Add Listing textstyles, hint textfield  style

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
     - family: Nunito
       fonts:
         - asset: assets/fonts/Nunito-Regular.ttf
+        - asset: assets/fonts/Nunito-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
